GNOME Bugzilla – Bug 739536
subtitleoverlay: return available factory caps instead of any on caps query
Last modified: 2014-11-03 09:47:19 UTC
i've discovered that the getcaps function of the subtitleoverlay element will always return either ANY or the given filter caps patch: return gst_subtitle_overlay_create_factory_caps () instead of ANY, as suggested by slomo to be attached
Created attachment 289849 [details] [review] subtitleoverlay: return available factory caps instead of any on caps query
Created attachment 289851 [details] [review] subtitleoverlay: return available factory CAPS instead of ANY on CAPS query explicitely use GST_CAPS_INTERSECT_FIRST
commit bae96c85eed7fe5271924721055ea7be85e82cb7 Author: Andreas Frisch <fraxinas@opendreambox.org> Date: Sun Nov 2 21:45:30 2014 +0100 subtitleoverlay: return available factory CAPS instead of ANY on CAPS query https://bugzilla.gnome.org/show_bug.cgi?id=739536
Slomo, I just found this: https://bugzilla.gnome.org/show_bug.cgi?id=688476