subtitleoverlay: return available factory CAPS instead of ANY on CAPS query

https://bugzilla.gnome.org/show_bug.cgi?id=739536